fixing overlapping

--- a/views/style/user.css
+++ b/views/style/user.css
@@ -34,9 +34,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px; 
+    margin-bottom: 30px; 
+  }
+
+  div.bottom > .Left, div.bottom > .msgCon {
     flex-grow: 1;
-    overflow: auto;
+    overflow: visible; 
   }
 }
 
